--- a/app/src/main/res/layout/doacao_page.xml
+++ b/app/src/main/res/layout/doacao_page.xml
@@ -206,7 +206,7 @@
             android:id="@+id/input_cpf"
             android:layout_width="340dp"
             android:layout_height="wrap_content"
-            android:hint="Digite seu CPF ou CNPJ"
+            android:hint="Digite seu CPF"
             android:inputType="number"
             android:textColor="@color/black"
             android:textColorHint="#80000000"
